kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Flux Webhook"
    gethomepage.dev/description: "GitHub Webhook Receiver"
    gethomepage.dev/group: "GitOps"
    gethomepage.dev/icon: "flux-cd.png"
    gethomepage.dev/pod-selector: "app=notification-controller"
spec:
  hostnames: ["flux-webhook.plygrnd.org"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
